# procedural_road_editor_1

./: Cargo.toml
assets/: .gitignore
src/: game_modes.rs  main.rs  road.rs  road_drawer.rs  road_editor.rs  schedule.rs  system_sets.rs  ui.rs  utility.rs  world.rs
src/road/: active_road.rs  load.rs  persistance.rs  reorder_components.rs  road_builder.rs  road_component.rs  road_data.rs  road_editor.rs  road_marking.rs  road_markings.rs  road_node.rs  road_preview.rs  road_section.rs  save.rs
src/road/active_road/: active_road_events.rs  changed_component_indices.rs  new_road_component.rs  reorder_road_components.rs  road_component_change.rs  road_component_deletion.rs  road_component_reorder.rs
src/road/road_component/: road_component_position.rs
src/road/road_editor/: active_road.rs
src/road/road_marking/: config_ui.rs  road_marking_events.rs
src/road/road_node/: gizmos.rs  road_node_builder.rs
src/road/road_section/: gizmos.rs  road_section_builder.rs
src/road_drawer/: bulldozer.rs  gizmos.rs  road_being_drawn.rs  road_drawer_tool.rs  section_being_drawn.rs  selected_road.rs
src/road_drawer/bulldozer/: ui.rs
src/road_drawer/road_being_drawn/: nearest_road_node.rs  section_being_drawn.rs  section_end_being_drawn.rs
src/ui/: buttons.rs  components.rs  inputs.rs  list.rs  main_menu.rs  modal.rs  pause_menu.rs  sidebar.rs  toolbar.rs
src/utility/: changed_value.rs  circular_arc.rs  distance.rs  line_intersection.rs  mesh_builder.rs  mouse_on_ui.rs  partial.rs  texture_builder.rs
src/world/: camera.rs  world_interaction.rs
(+55 files in other folders)
