[package]
name = "procedural_road_editor_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.27.0", features = ["debug-render-3d"] }
ron = "0.8.1"
serde = "1.0.210"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
